--- a/src/components/TreeNode/TreeNode.css
+++ b/src/components/TreeNode/TreeNode.css
@@ -33,7 +33,7 @@
 }
 
 .tree-node-actions .ant-btn {
-  font-size: 1.5em
+  font-size: 1em
 }
 
 /**
